Testing Linux push

--- a/hello_canvas.html
+++ b/hello_canvas.html
@@ -39,6 +39,7 @@
 
 
             // drawing circles
+            // adding this to text push
             context.beginPath()
             // (center, coordinates, radius, start angle, end angle)
             context.arc(250, 250, 75, 0, 6.3)
@@ -57,7 +58,7 @@
             context.strokeText('This is some more text', 50, 100)
 
 
-            // drawing rectangles
+            // Drawing rectangles
             // draws a filled rectangle
             // attributes: left ? px, down ? px, width, height
             context.fillRect(120, 20, 50, 200)
